fixed spacing

--- a/src/Components/Board/board.css
+++ b/src/Components/Board/board.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin-top: 15rem;
+    margin-top: 7rem;
     margin-bottom: 10px;
     font-size: clamp(2rem, 3vw, 4rem);
     /* border: 2px solid gold; */
